First commited as before_43064_rev5