@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -24,8 +24,6 @@ import org.eclipse.swt.events.KeyAdapter;
 import org.eclipse.swt.events.KeyEvent;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
-import org.eclipse.swt.events.TraverseEvent;
-import org.eclipse.swt.events.TraverseListener;
 import org.eclipse.swt.graphics.GC;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
@@ -157,13 +155,10 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 			}
 		});
 
-		comboBox.addTraverseListener(new TraverseListener() {
-			@Override
-			public void keyTraversed(TraverseEvent e) {
-				if (e.detail == SWT.TRAVERSE_ESCAPE
-						|| e.detail == SWT.TRAVERSE_RETURN) {
-					e.doit = false;
-				}
+		comboBox.addTraverseListener(e -> {
+			if (e.detail == SWT.TRAVERSE_ESCAPE
+					|| e.detail == SWT.TRAVERSE_RETURN) {
+				e.doit = false;
 			}
 		});
 
@@ -186,7 +181,7 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 	 */
 	@Override
 	protected Object doGetValue() {
-		return new Integer(selection);
+		return Integer.valueOf(selection);
 	}
 
 	@Override
@@ -263,8 +258,7 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 			// Only format if the 'index' is valid
 			if (items.length > 0 && selection >= 0 && selection < items.length) {
 				// try to insert the current value into the error message.
-				setErrorMessage(MessageFormat.format(getErrorMessage(),
-						new Object[] { items[selection] }));
+				setErrorMessage(MessageFormat.format(getErrorMessage(), items[selection]));
 			} else {
 				// Since we don't have a valid index, assume we're using an
 				// 'edit'
