@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2014 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -13,8 +13,11 @@
  *     - Fix for bug 208602 - [Dialogs] Open Type dialog needs accessible labels
  *  Simon Muschel <smuschel@gmx.de> - bug 258493
  *  Lars Vogel <Lars.Vogel@gmail.com> - Bug 440810
+ *  Patrik Suzzi <psuzzi@gmail.com> - Bug 485133
  *******************************************************************************/
 package org.eclipse.ui.dialogs;
+
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.io.IOException;
 import java.io.StringReader;
@@ -40,33 +43,29 @@ import org.eclipse.core.runtime.ListenerList;
 import org.eclipse.core.runtime.NullProgressMonitor;
 import org.eclipse.core.runtime.ProgressMonitorWrapper;
 import org.eclipse.core.runtime.Status;
-import org.eclipse.core.runtime.SubProgressMonitor;
+import org.eclipse.core.runtime.SubMonitor;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.action.Action;
 import org.eclipse.jface.action.ActionContributionItem;
 import org.eclipse.jface.action.IAction;
-import org.eclipse.jface.action.IMenuListener;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.LegacyActionTools;
 import org.eclipse.jface.action.MenuManager;
 import org.eclipse.jface.dialogs.IDialogSettings;
 import org.eclipse.jface.viewers.ContentViewer;
 import org.eclipse.jface.viewers.DelegatingStyledCellLabelProvider.IStyledLabelProvider;
-import org.eclipse.jface.viewers.DoubleClickEvent;
 import org.eclipse.jface.viewers.IColorProvider;
 import org.eclipse.jface.viewers.IContentProvider;
-import org.eclipse.jface.viewers.IDoubleClickListener;
 import org.eclipse.jface.viewers.IFontProvider;
 import org.eclipse.jface.viewers.ILabelDecorator;
 import org.eclipse.jface.viewers.ILabelProvider;
 import org.eclipse.jface.viewers.ILabelProviderListener;
 import org.eclipse.jface.viewers.ILazyContentProvider;
 import org.eclipse.jface.viewers.ISelection;
-import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredContentProvider;
+import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.LabelProvider;
 import org.eclipse.jface.viewers.LabelProviderChangedEvent;
-import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.StyledCellLabelProvider;
 import org.eclipse.jface.viewers.StyledString;
@@ -83,14 +82,8 @@ import org.eclipse.swt.custom.CLabel;
 import org.eclipse.swt.custom.ViewForm;
 import org.eclipse.swt.events.KeyAdapter;
 import org.eclipse.swt.events.KeyEvent;
-import org.eclipse.swt.events.ModifyEvent;
-import org.eclipse.swt.events.ModifyListener;
 import org.eclipse.swt.events.MouseAdapter;
 import org.eclipse.swt.events.MouseEvent;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
-import org.eclipse.swt.events.TraverseEvent;
-import org.eclipse.swt.events.TraverseListener;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.GC;
@@ -132,8 +125,7 @@ import org.eclipse.ui.statushandlers.StatusManager;
  *
  * @since 3.3
  */
-public abstract class FilteredItemsSelectionDialog extends
-		SelectionStatusDialog {
+public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog {
 
 	private static final String DIALOG_BOUNDS_SETTINGS = "DialogBoundsSettings"; //$NON-NLS-1$
 
@@ -462,13 +454,10 @@ public abstract class FilteredItemsSelectionDialog extends
 		headerLabel.setText((getMessage() != null && getMessage().trim()
 				.length() > 0) ? getMessage()
 				: WorkbenchMessages.FilteredItemsSelectionDialog_patternLabel);
-		headerLabel.addTraverseListener(new TraverseListener() {
-			@Override
-			public void keyTraversed(TraverseEvent e) {
-				if (e.detail == SWT.TRAVERSE_MNEMONIC && e.doit) {
-					e.detail = SWT.TRAVERSE_NONE;
-					pattern.setFocus();
-				}
+		headerLabel.addTraverseListener(e -> {
+			if (e.detail == SWT.TRAVERSE_MNEMONIC && e.doit) {
+				e.detail = SWT.TRAVERSE_NONE;
+				pattern.setFocus();
 			}
 		});
 
@@ -499,13 +488,10 @@ public abstract class FilteredItemsSelectionDialog extends
 		listLabel
 				.setText(WorkbenchMessages.FilteredItemsSelectionDialog_listLabel);
 
-		listLabel.addTraverseListener(new TraverseListener() {
-			@Override
-			public void keyTraversed(TraverseEvent e) {
-				if (e.detail == SWT.TRAVERSE_MNEMONIC && e.doit) {
-					e.detail = SWT.TRAVERSE_NONE;
-					list.getTable().setFocus();
-				}
+		listLabel.addTraverseListener(e -> {
+			if (e.detail == SWT.TRAVERSE_MNEMONIC && e.doit) {
+				e.detail = SWT.TRAVERSE_NONE;
+				list.getTable().setFocus();
 			}
 		});
 
@@ -538,12 +524,7 @@ public abstract class FilteredItemsSelectionDialog extends
 				.getImage(IWorkbenchGraphicConstants.IMG_LCL_VIEW_MENU));
 		toolItem
 				.setToolTipText(WorkbenchMessages.FilteredItemsSelectionDialog_menu);
-		toolItem.addSelectionListener(new SelectionAdapter() {
-			@Override
-			public void widgetSelected(SelectionEvent e) {
-				showViewMenu();
-			}
-		});
+		toolItem.addSelectionListener(widgetSelectedAdapter(e -> showViewMenu()));
 
 		menuManager = new MenuManager();
 
@@ -592,7 +573,7 @@ public abstract class FilteredItemsSelectionDialog extends
      * @since 3.5
      */
 	protected void fillContextMenu(IMenuManager menuManager) {
-		List selectedElements= ((StructuredSelection)list.getSelection()).toList();
+		List selectedElements = list.getStructuredSelection().toList();
 
 		Object item= null;
 
@@ -613,17 +594,11 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	private void createPopupMenu() {
 		removeHistoryItemAction = new RemoveHistoryItemAction();
-		removeHistoryActionContributionItem = new ActionContributionItem(
-				removeHistoryItemAction);
+		removeHistoryActionContributionItem = new ActionContributionItem(removeHistoryItemAction);
 
 		contextMenuManager = new MenuManager();
 		contextMenuManager.setRemoveAllWhenShown(true);
-		contextMenuManager.addMenuListener(new IMenuListener() {
-			@Override
-			public void menuAboutToShow(IMenuManager manager) {
-				fillContextMenu(manager);
-			}
-		});
+		contextMenuManager.addMenuListener(manager -> fillContextMenu(manager));
 
 		final Table table = list.getTable();
 		Menu menu= contextMenuManager.createContextMenu(table);
@@ -691,12 +666,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		createPopupMenu();
 
-		pattern.addModifyListener(new ModifyListener() {
-			@Override
-			public void modifyText(ModifyEvent e) {
-				applyFilter();
-			}
-		});
+		pattern.addModifyListener(e -> applyFilter());
 
 		pattern.addKeyListener(new KeyAdapter() {
 			@Override
@@ -709,21 +679,12 @@ public abstract class FilteredItemsSelectionDialog extends
 			}
 		});
 
-		list.addSelectionChangedListener(new ISelectionChangedListener() {
-			@Override
-			public void selectionChanged(SelectionChangedEvent event) {
-				StructuredSelection selection = (StructuredSelection) event
-						.getSelection();
-				handleSelected(selection);
-			}
+		list.addSelectionChangedListener(event -> {
+			StructuredSelection selection = (StructuredSelection) event.getSelection();
+			handleSelected(selection);
 		});
 
-		list.addDoubleClickListener(new IDoubleClickListener() {
-			@Override
-			public void doubleClick(DoubleClickEvent event) {
-				handleDoubleClick();
-			}
-		});
+		list.addDoubleClickListener(event -> handleDoubleClick());
 
 		list.getTable().addKeyListener(new KeyAdapter() {
 			@Override
@@ -753,8 +714,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 				if (e.keyCode == SWT.ARROW_UP && (e.stateMask & SWT.SHIFT) != 0
 						&& (e.stateMask & SWT.CTRL) != 0) {
-					StructuredSelection selection = (StructuredSelection) list
-							.getSelection();
+					IStructuredSelection selection = list.getStructuredSelection();
 
 					if (selection.size() == 1) {
 						Object element = selection.getFirstElement();
@@ -765,8 +725,7 @@ public abstract class FilteredItemsSelectionDialog extends
 								.getSelectionIndex() - 1) instanceof ItemsListSeparator)
 							list.getTable().setSelection(
 									list.getTable().getSelectionIndex() - 1);
-						list.getTable().notifyListeners(SWT.Selection,
-								new Event());
+						list.getTable().notifyListeners(SWT.Selection, new Event());
 
 					}
 				}
@@ -789,7 +748,9 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		details = new DetailsContentViewer(content, SWT.BORDER | SWT.FLAT);
 		details.setVisible(toggleStatusLineAction.isChecked());
-		details.setContentProvider(new NullContentProvider());
+		details.setContentProvider(new IContentProvider() {
+			// intentionally empty
+		});
 		details.setLabelProvider(getDetailsLabelProvider());
 
 		applyDialogFont(content);
@@ -846,7 +807,7 @@ public abstract class FilteredItemsSelectionDialog extends
 					.setInput(NLS
 							.bind(
 									WorkbenchMessages.FilteredItemsSelectionDialog_nItemsSelected,
-									new Integer(selection.size())));
+									Integer.valueOf(selection.size())));
 			break;
 		}
 
@@ -1026,8 +987,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	@Override
 	protected void computeResult() {
 
-		List selectedElements = ((StructuredSelection) list.getSelection())
-				.toList();
+		List selectedElements = list.getStructuredSelection().toList();
 
 		List objectsToReturn = new ArrayList();
 
@@ -1112,8 +1072,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	 */
 	protected StructuredSelection getSelectedItems() {
 
-		StructuredSelection selection = (StructuredSelection) list
-				.getSelection();
+		StructuredSelection selection = (StructuredSelection) list.getStructuredSelection();
 
 		List selectedItems = selection.toList();
 		Object itemToRemove = null;
@@ -1524,8 +1483,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		@Override
 		public void run() {
-			List selectedElements = ((StructuredSelection) list.getSelection())
-					.toList();
+			List selectedElements = ((StructuredSelection) list.getSelection()).toList();
 			removeSelectedItems(selectedElements);
 		}
 	}
@@ -1534,14 +1492,13 @@ public abstract class FilteredItemsSelectionDialog extends
 		return PlatformUI.getPreferenceStore().getBoolean(IWorkbenchPreferenceConstants.USE_COLORED_LABELS);
 	}
 
-	private class ItemsListLabelProvider extends StyledCellLabelProvider
-			implements ILabelProviderListener {
+	private class ItemsListLabelProvider extends StyledCellLabelProvider implements ILabelProviderListener {
 		private ILabelProvider provider;
 
 		private ILabelDecorator selectionDecorator;
 
 		// Need to keep our own list of listeners
-		private ListenerList listeners = new ListenerList();
+		private ListenerList<ILabelProviderListener> listeners = new ListenerList<>();
 
 		/**
 		 * Creates a new instance of the class.
@@ -1626,8 +1583,8 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		private boolean isSelected(Object element) {
 			if (element != null && currentSelection != null) {
-				for (int i = 0; i < currentSelection.length; i++) {
-					if (element.equals(currentSelection[i]))
+				for (Object entry : currentSelection) {
+					if (element.equals(entry))
 						return true;
 				}
 			}
@@ -1636,8 +1593,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		private String getText(Object element) {
 			if (element instanceof ItemsListSeparator) {
-				return getSeparatorLabel(((ItemsListSeparator) element)
-						.getName());
+				return getSeparatorLabel(((ItemsListSeparator) element).getName());
 			}
 
 			String str = provider.getText(element);
@@ -1648,13 +1604,11 @@ public abstract class FilteredItemsSelectionDialog extends
 			return str;
 		}
 
-		private StyledString getStyledText(Object element,
-				IStyledLabelProvider provider) {
+		private StyledString getStyledText(Object element, IStyledLabelProvider provider) {
 			StyledString string = provider.getStyledText(element);
 
 			if (selectionDecorator != null && isSelected(element)) {
-				String decorated = selectionDecorator.decorateText(string
-						.getString(), element);
+				String decorated = selectionDecorator.decorateText(string.getString(), element);
 				return StyledCellLabelProvider.styleDecoratedString(decorated, null, string);
 				// no need to add colors when element is selected
 			}
@@ -1784,9 +1738,8 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		@Override
 		public void labelProviderChanged(LabelProviderChangedEvent event) {
-			Object[] l = listeners.getListeners();
-			for (int i = 0; i < listeners.size(); i++) {
-				((ILabelProviderListener) l[i]).labelProviderChanged(event);
+			for (ILabelProviderListener l : listeners) {
+				l.labelProviderChanged(event);
 			}
 		}
 	}
@@ -1925,8 +1878,7 @@ public abstract class FilteredItemsSelectionDialog extends
 							WorkbenchMessages.FilteredItemsSelectionDialog_taskProgressMessage,
 							new Object[] {
 									message,
-									new Integer(
-											(int) ((worked * 100) / totalWork)) });
+									Integer.valueOf((int) ((worked * 100) / totalWork)) });
 
 		}
 
@@ -2091,22 +2043,16 @@ public abstract class FilteredItemsSelectionDialog extends
 				lastCompletedFilter = null;
 				lastCompletedResult = null;
 
-				SubProgressMonitor subMonitor = null;
-				if (monitor != null) {
-					monitor
-							.beginTask(
+				SubMonitor subMonitor = SubMonitor.convert(monitor,
 									WorkbenchMessages.FilteredItemsSelectionDialog_searchJob_taskName,
 									100);
-					subMonitor = new SubProgressMonitor(monitor, 95);
 
-				}
-
-				fillContentProvider(contentProvider, itemsFilter, subMonitor);
+				fillContentProvider(contentProvider, itemsFilter, subMonitor.split(95));
 
 				if (monitor != null && !monitor.isCanceled()) {
-					monitor.worked(2);
+					subMonitor.worked(2);
 					contentProvider.rememberResult(itemsFilter);
-					monitor.worked(3);
+					subMonitor.worked(3);
 				}
 			}
 
@@ -2226,8 +2172,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 			IMemento[] mementoElements = historyMemento
 					.getChildren(infoNodeName);
-			for (int i = 0; i < mementoElements.length; ++i) {
-				IMemento mementoElement = mementoElements[i];
+			for (IMemento mementoElement : mementoElements) {
 				Object object = restoreItemFromMemento(mementoElement);
 				if (object != null) {
 					historyList.add(object);
@@ -2246,8 +2191,7 @@ public abstract class FilteredItemsSelectionDialog extends
 			IMemento historyMemento = memento.createChild(rootNodeName);
 
 			Object[] items = getHistoryItems();
-			for (int i = 0; i < items.length; i++) {
-				Object item = items[i];
+			for (Object item : items) {
 				IMemento elementMemento = historyMemento
 						.createChild(infoNodeName);
 				storeItemToMemento(item, elementMemento);
@@ -2616,8 +2560,7 @@ public abstract class FilteredItemsSelectionDialog extends
 		public void addHistoryItems(ItemsFilter itemsFilter) {
 			if (this.selectionHistory != null) {
 				Object[] items = this.selectionHistory.getHistoryItems();
-				for (int i = 0; i < items.length; i++) {
-					Object item = items[i];
+				for (Object item : items) {
 					if (itemsFilter == filter) {
 						if (itemsFilter != null) {
 							if (itemsFilter.matchItem(item)) {
@@ -2816,61 +2759,41 @@ public abstract class FilteredItemsSelectionDialog extends
 		 * @param monitor
 		 *            progress monitor
 		 */
-		public void reloadCache(boolean checkDuplicates,
-				IProgressMonitor monitor) {
-
+		public void reloadCache(boolean checkDuplicates, IProgressMonitor monitor) {
 			reset = false;
 
-			if (monitor != null) {
-				// the work is divided into two actions of the same length
-				int totalWork = checkDuplicates ? 200 : 100;
+			// the work is divided into two actions of the same length
+			int totalWork = checkDuplicates ? 200 : 100;
 
-				monitor
-						.beginTask(
-								WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob,
-								totalWork);
-			}
+			SubMonitor subMonitor = SubMonitor.convert(monitor,
+					WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob, totalWork);
 
 			// the TableViewer's root (the input) is treated as parent
 
-			lastFilteredItems = Arrays.asList(getFilteredItems(list.getInput(),
-					monitor != null ? new SubProgressMonitor(monitor, 100)
-							: null));
+			lastFilteredItems = Arrays.asList(getFilteredItems(list.getInput(), subMonitor.split(100)));
 
-			if (reset || (monitor != null && monitor.isCanceled())) {
-				if (monitor != null)
-					monitor.done();
+			if (reset || subMonitor.isCanceled()) {
 				return;
 			}
 
 			if (checkDuplicates) {
-				checkDuplicates(monitor);
+				checkDuplicates(subMonitor.split(100));
 			}
-			if (monitor != null)
-				monitor.done();
 		}
 
 		private void checkDuplicates(IProgressMonitor monitor) {
 			synchronized (lastFilteredItems) {
-				IProgressMonitor subMonitor = null;
-				int reportEvery = lastFilteredItems.size() / 20;
-				if (monitor != null) {
-					subMonitor = new SubProgressMonitor(monitor, 100);
-					subMonitor
-							.beginTask(
-									WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob_checkDuplicates,
-									5);
-				}
-				HashMap helperMap = new HashMap();
+				SubMonitor subMonitor = SubMonitor.convert(monitor,
+						WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob_checkDuplicates,
+						lastFilteredItems.size());
+				HashMap<String, Object> helperMap = new HashMap<>();
 				for (int i = 0; i < lastFilteredItems.size(); i++) {
-					if (reset
-							|| (subMonitor != null && subMonitor.isCanceled()))
+					if (reset || subMonitor.isCanceled())
 						return;
 					Object item = lastFilteredItems.get(i);
 
 					if (!(item instanceof ItemsListSeparator)) {
-						Object previousItem = helperMap.put(
-								getElementName(item), item);
+						Object previousItem = helperMap.put(getElementName(item), item);
 						if (previousItem != null) {
 							setDuplicateElement(previousItem, true);
 							setDuplicateElement(item, true);
@@ -2879,9 +2802,7 @@ public abstract class FilteredItemsSelectionDialog extends
 						}
 					}
 
-					if (subMonitor != null && reportEvery != 0
-							&& (i + 1) % reportEvery == 0)
-						subMonitor.worked(1);
+					subMonitor.worked(1);
 				}
 				helperMap.clear();
 			}
@@ -2982,21 +2903,6 @@ public abstract class FilteredItemsSelectionDialog extends
 			// currently filters are only added when dialog is restored
 			// if it is changed, refreshing the whole TableViewer should be
 			// added
-		}
-
-	}
-
-	/**
-	 * A content provider that does nothing.
-	 */
-	private class NullContentProvider implements IContentProvider {
-
-		@Override
-		public void dispose() {
-		}
-
-		@Override
-		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 
 	}
@@ -3127,8 +3033,8 @@ public abstract class FilteredItemsSelectionDialog extends
 				return;
 			}
 			Object input = getInput();
-			for (int i = 0; i < objs.length; i++) {
-				if (objs[i].equals(input)) {
+			for (Object obj : objs) {
+				if (obj.equals(input)) {
 					refresh();
 					break;
 				}
