@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2015 IBM Corporation and others.
+ * Copyright (c) 2006, 2017 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,24 +8,28 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Andrey Loskutov <loskutov@gmx.de> - Bug 372799
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 490700, 511198
  *******************************************************************************/
 
 package org.eclipse.ui.internal;
 
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
+
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
 import org.eclipse.core.runtime.Assert;
 import org.eclipse.core.runtime.AssertionFailedException;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.ListenerList;
-import org.eclipse.core.runtime.SubProgressMonitor;
+import org.eclipse.core.runtime.SubMonitor;
 import org.eclipse.jface.dialogs.IDialogConstants;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.dialogs.MessageDialogWithToggle;
@@ -38,8 +42,6 @@ import org.eclipse.jface.viewers.IStructuredContentProvider;
 import org.eclipse.jface.window.IShellProvider;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
@@ -73,15 +75,15 @@ import org.eclipse.ui.model.WorkbenchPartLabelProvider;
  */
 public class SaveablesList implements ISaveablesLifecycleListener {
 
-	private ListenerList listeners = new ListenerList();
+	private ListenerList<ISaveablesLifecycleListener> listeners = new ListenerList<>();
 
 	// event source (mostly ISaveablesSource) -> Set of Saveable
-	private Map modelMap = new HashMap();
+	private Map<Object, Set<Saveable>> modelMap = new HashMap<>();
 
-	// reference counting map, Saveable -> Integer
-	private Map modelRefCounts = new HashMap();
+	// reference counting map
+	private Map<Saveable, Integer> modelRefCounts = new HashMap<>();
 
-	private Set nonPartSources = new HashSet();
+	private Set<ISaveablesSource> nonPartSources = new HashSet<>();
 
 	/**
 	 * Returns the list of open models managed by this model manager.
@@ -89,12 +91,13 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @return a list of models
 	 */
 	public Saveable[] getOpenModels() {
-		Set allDistinctModels = new HashSet();
-		Iterator saveables = modelMap.values().iterator();
-		while (saveables.hasNext())
-			allDistinctModels.addAll((Set)saveables.next());
+		Set<Saveable> allDistinctModels = new HashSet<>();
+		Iterator<Set<Saveable>> saveables = modelMap.values().iterator();
+		while (saveables.hasNext()) {
+			allDistinctModels.addAll(saveables.next());
+		}
 
-		return (Saveable[]) allDistinctModels.toArray(
+		return allDistinctModels.toArray(
 				new Saveable[allDistinctModels.size()]);
 	}
 
@@ -106,9 +109,9 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			return false;
 		}
 		boolean result = false;
-		Set modelsForSource = (Set) modelMap.get(source);
+		Set<Saveable> modelsForSource = modelMap.get(source);
 		if (modelsForSource == null) {
-			modelsForSource = new HashSet();
+			modelsForSource = new HashSet<>();
 			modelMap.put(source, modelsForSource);
 		}
 		if (modelsForSource.add(model)) {
@@ -127,14 +130,14 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param key
 	 * @return true if the ref count of the given key is now 1
 	 */
-	private boolean incrementRefCount(Map referenceMap, Object key) {
+	private boolean incrementRefCount(Map<Saveable, Integer> referenceMap, Saveable key) {
 		boolean result = false;
-		Integer refCount = (Integer) referenceMap.get(key);
+		Integer refCount = referenceMap.get(key);
 		if (refCount == null) {
 			result = true;
-			refCount = new Integer(0);
+			refCount = Integer.valueOf(0);
 		}
-		referenceMap.put(key, new Integer(refCount.intValue() + 1));
+		referenceMap.put(key, Integer.valueOf(refCount.intValue() + 1));
 		return result;
 	}
 
@@ -145,16 +148,16 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param key
 	 * @return true if the ref count of the given key was 1
 	 */
-	private boolean decrementRefCount(Map referenceMap, Object key) {
+	private boolean decrementRefCount(Map<Saveable, Integer> referenceMap, Saveable key) {
 		boolean result = false;
-		Integer refCount = (Integer) referenceMap.get(key);
+		Integer refCount = referenceMap.get(key);
 		if (refCount == null)
-			Assert.isTrue(false, key + ": " + ((Saveable) key).getName()); //$NON-NLS-1$
+			Assert.isTrue(false, key + ": " + key.getName()); //$NON-NLS-1$
 		if (refCount.intValue() == 1) {
 			referenceMap.remove(key);
 			result = true;
 		} else {
-			referenceMap.put(key, new Integer(refCount.intValue() - 1));
+			referenceMap.put(key, Integer.valueOf(refCount.intValue() - 1));
 		}
 		return result;
 	}
@@ -162,7 +165,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	// returns true if this model was removed from getModels();
 	private boolean removeModel(Object source, Saveable model) {
 		boolean result = false;
-		Set modelsForSource = (Set) modelMap.get(source);
+		Set<Saveable> modelsForSource = modelMap.get(source);
 		if (modelsForSource == null) {
 			logWarning(
 					"Ignored attempt to remove a saveable when no saveables were known", source, model); //$NON-NLS-1$
@@ -224,10 +227,10 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			break;
 		case SaveablesLifecycleEvent.PRE_CLOSE:
 			Saveable[] models = event.getSaveables();
-			Map modelsDecrementing = new HashMap();
-			Set modelsClosing = new HashSet();
-			for (int i = 0; i < models.length; i++) {
-				incrementRefCount(modelsDecrementing, models[i]);
+			Map<Saveable, Integer> modelsDecrementing = new HashMap<>();
+			Set<Saveable> modelsClosing = new HashSet<>();
+			for (Saveable model : models) {
+				incrementRefCount(modelsDecrementing, model);
 			}
 
 			fillModelsClosing(modelsClosing, modelsDecrementing);
@@ -266,16 +269,15 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param modelArray
 	 */
 	private void removeModels(Object source, Saveable[] modelArray) {
-		List removed = new ArrayList();
-		for (int i = 0; i < modelArray.length; i++) {
-			Saveable model = modelArray[i];
+		List<Saveable> removed = new ArrayList<>();
+		for (Saveable model : modelArray) {
 			if (removeModel(source, model)) {
 				removed.add(model);
 			}
 		}
 		if (removed.size() > 0) {
 			fireModelLifecycleEvent(new SaveablesLifecycleEvent(this,
-					SaveablesLifecycleEvent.POST_OPEN, (Saveable[]) removed
+					SaveablesLifecycleEvent.POST_OPEN, removed
 							.toArray(new Saveable[removed.size()]), false));
 		}
 	}
@@ -285,16 +287,15 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param modelArray
 	 */
 	private void addModels(Object source, Saveable[] modelArray) {
-		List added = new ArrayList();
-		for (int i = 0; i < modelArray.length; i++) {
-			Saveable model = modelArray[i];
+		List<Saveable> added = new ArrayList<>();
+		for (Saveable model : modelArray) {
 			if (addModel(source, model)) {
 				added.add(model);
 			}
 		}
 		if (added.size() > 0) {
 			fireModelLifecycleEvent(new SaveablesLifecycleEvent(this,
-					SaveablesLifecycleEvent.POST_OPEN, (Saveable[]) added
+					SaveablesLifecycleEvent.POST_OPEN, added
 							.toArray(new Saveable[added.size()]), false));
 		}
 	}
@@ -303,10 +304,8 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param event
 	 */
 	private void fireModelLifecycleEvent(SaveablesLifecycleEvent event) {
-		Object[] listenerArray = listeners.getListeners();
-		for (int i = 0; i < listenerArray.length; i++) {
-			((ISaveablesLifecycleListener) listenerArray[i])
-					.handleLifecycleEvent(event);
+		for (ISaveablesLifecycleListener listener : listeners) {
+			listener.handleLifecycleEvent(event);
 		}
 	}
 
@@ -344,22 +343,21 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param window
 	 * @return the post close info to be passed to postClose
 	 */
-	public Object preCloseParts(List partsToClose, boolean save,
+	public Object preCloseParts(List<IWorkbenchPart> partsToClose, boolean save,
 			final IWorkbenchWindow window) {
 		return preCloseParts(partsToClose, save, window, window);
 	}
 
-	public Object preCloseParts(List partsToClose, boolean save, IShellProvider shellProvider,
+	public Object preCloseParts(List<IWorkbenchPart> partsToClose, boolean save, IShellProvider shellProvider,
 			final IWorkbenchWindow window) {
 		return preCloseParts(partsToClose, false, save, shellProvider, window);
 	}
 
-	public Object preCloseParts(List partsToClose, boolean addNonPartSources, boolean save,
+	public Object preCloseParts(List<IWorkbenchPart> partsToClose, boolean addNonPartSources, boolean save,
 			IShellProvider shellProvider, final IWorkbenchWindow window) {
 		// reference count (how many occurrences of a model will go away?)
 		PostCloseInfo postCloseInfo = new PostCloseInfo();
-		for (Iterator it = partsToClose.iterator(); it.hasNext();) {
-			IWorkbenchPart part = (IWorkbenchPart) it.next();
+		for (IWorkbenchPart part : partsToClose) {
 			postCloseInfo.partsClosing.add(part);
 			ISaveablePart saveable = SaveableHelper.getSaveable(part);
 			if (saveable != null) {
@@ -383,10 +381,8 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 					continue;
 				}
 			}
-			Saveable[] modelsFromSource = getSaveables(part);
-			for (int i = 0; i < modelsFromSource.length; i++) {
-				incrementRefCount(postCloseInfo.modelsDecrementing,
-						modelsFromSource[i]);
+			for (Saveable saveableModel : getSaveables(part)) {
+				incrementRefCount(postCloseInfo.modelsDecrementing, saveableModel);
 			}
 		}
 		fillModelsClosing(postCloseInfo.modelsClosing,
@@ -418,16 +414,16 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @return true if the user canceled
 	 */
 	private boolean promptForSavingIfNecessary(final IWorkbenchWindow window,
-			Set modelsClosing, Map modelsDecrementing, boolean canCancel) {
+			Set<Saveable> modelsClosing, Map<Saveable, Integer> modelsDecrementing, boolean canCancel) {
 		return promptForSavingIfNecessary(window, window, modelsClosing, modelsDecrementing,
 				canCancel);
 	}
 
 	private boolean promptForSavingIfNecessary(IShellProvider shellProvider,
-			IWorkbenchWindow window, Set modelsClosing, Map modelsDecrementing, boolean canCancel) {
-		List modelsToOptionallySave = new ArrayList();
-		for (Iterator it = modelsDecrementing.keySet().iterator(); it.hasNext();) {
-			Saveable modelDecrementing = (Saveable) it.next();
+ IWorkbenchWindow window,
+			Set<Saveable> modelsClosing, Map<Saveable, Integer> modelsDecrementing, boolean canCancel) {
+		List<Saveable> modelsToOptionallySave = new ArrayList<>();
+		for (Saveable modelDecrementing : modelsDecrementing.keySet()) {
 			if (modelDecrementing.isDirty() && !modelsClosing.contains(modelDecrementing)) {
 				modelsToOptionallySave.add(modelDecrementing);
 			}
@@ -440,9 +436,8 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			return true;
 		}
 
-		List modelsToSave = new ArrayList();
-		for (Iterator it = modelsClosing.iterator(); it.hasNext();) {
-			Saveable modelClosing = (Saveable) it.next();
+		List<Saveable> modelsToSave = new ArrayList<>();
+		for (Saveable modelClosing : modelsClosing) {
 			if (modelClosing.isDirty()) {
 				modelsToSave.add(modelClosing);
 			}
@@ -455,10 +450,10 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param modelsClosing
 	 * @param modelsDecrementing
 	 */
-	private void fillModelsClosing(Set modelsClosing, Map modelsDecrementing) {
-		for (Iterator it = modelsDecrementing.keySet().iterator(); it.hasNext();) {
-			Saveable model = (Saveable) it.next();
-			if (modelsDecrementing.get(model).equals(modelRefCounts.get(model))) {
+	private void fillModelsClosing(Set<Saveable> modelsClosing, Map<Saveable, Integer> modelsDecrementing) {
+		for (Entry<Saveable, Integer> entry : modelsDecrementing.entrySet()) {
+			Saveable model = entry.getKey();
+			if (entry.getValue().equals(modelRefCounts.get(model))) {
 				modelsClosing.add(model);
 			}
 		}
@@ -476,7 +471,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param stillOpenElsewhere whether the models are referenced by open parts
 	 * @return true if the user canceled
 	 */
-	public boolean promptForSaving(List modelsToSave,
+	public boolean promptForSaving(List<Saveable> modelsToSave,
 			final IShellProvider shellProvider, IRunnableContext runnableContext, final boolean canCancel, boolean stillOpenElsewhere) {
 		// Save parts, exit the method if cancel is pressed.
 		if (modelsToSave.size() > 0) {
@@ -492,30 +487,28 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 				modelsToSave.clear();
 				return false;
 			} else if (modelsToSave.size() == 1) {
-				Saveable model = (Saveable) modelsToSave.get(0);
+				Saveable model = modelsToSave.get(0);
 				// Show a dialog.
-				String[] buttons;
-				if(canCancel) {
-					buttons = new String[] { IDialogConstants.YES_LABEL,
-							IDialogConstants.NO_LABEL,
-							IDialogConstants.CANCEL_LABEL };
-				} else {
-					buttons = new String[] { IDialogConstants.YES_LABEL,
-							IDialogConstants.NO_LABEL};
-				}
 
 				// don't save if we don't prompt
 				int choice = ISaveablePart2.NO;
 
 				MessageDialog dialog;
 				if (stillOpenElsewhere) {
+					LinkedHashMap<String, Integer> buttonLabelToIdMap = new LinkedHashMap<>();
+					buttonLabelToIdMap.put(WorkbenchMessages.SaveableHelper_Save, IDialogConstants.OK_ID);
+					buttonLabelToIdMap.put(WorkbenchMessages.SaveableHelper_Dont_Save, IDialogConstants.NO_ID);
+					if (canCancel) {
+						buttonLabelToIdMap.put(WorkbenchMessages.SaveableHelper_Cancel, IDialogConstants.CANCEL_ID);
+					}
 					String message = NLS
 							.bind(
 									WorkbenchMessages.EditorManager_saveChangesOptionallyQuestion,
 									model.getName());
 					MessageDialogWithToggle dialogWithToggle = new MessageDialogWithToggle(shellProvider.getShell(),
 							WorkbenchMessages.Save_Resource, null, message,
-							MessageDialog.QUESTION, buttons, 0, WorkbenchMessages.EditorManager_closeWithoutPromptingOption, false) {
+							MessageDialog.QUESTION, buttonLabelToIdMap, 0,
+							WorkbenchMessages.EditorManager_closeWithoutPromptingOption, false) {
 						@Override
 						protected int getShellStyle() {
 							return (canCancel ? SWT.CLOSE : SWT.NONE)
@@ -526,13 +519,22 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 					};
 					dialog = dialogWithToggle;
 				} else {
+					String[] buttons;
+					if (canCancel) {
+						buttons = new String[] { WorkbenchMessages.SaveableHelper_Save,
+								WorkbenchMessages.SaveableHelper_Dont_Save, WorkbenchMessages.SaveableHelper_Cancel };
+					} else {
+						buttons = new String[] { WorkbenchMessages.SaveableHelper_Save,
+								WorkbenchMessages.SaveableHelper_Dont_Save };
+					}
+
 					String message = NLS
 							.bind(
 									WorkbenchMessages.EditorManager_saveChangesQuestion,
 									model.getName());
 					dialog = new MessageDialog(shellProvider.getShell(),
 							WorkbenchMessages.Save_Resource, null, message,
-							MessageDialog.QUESTION, buttons, 0) {
+							MessageDialog.QUESTION, 0, buttons) {
 						@Override
 						protected int getShellStyle() {
 							return (canCancel ? SWT.CLOSE : SWT.NONE)
@@ -605,7 +607,13 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 						apiPreferenceStore.setValue(IWorkbenchPreferenceConstants.PROMPT_WHEN_SAVEABLE_STILL_OPEN, false);
 					}
 
-					modelsToSave = Arrays.asList(dlg.getResult());
+					modelsToSave = new ArrayList<>();
+					Object[] objects = dlg.getResult();
+					for (Object object : objects) {
+						if (object instanceof Saveable) {
+							modelsToSave.add((Saveable) object);
+						}
+					}
 				}
 			}
 		}
@@ -623,7 +631,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 *            use a workbench window for this.
 	 * @return <code>true</code> if the operation was canceled
 	 */
-	public boolean saveModels(final List finalModels, final IShellProvider shellProvider,
+	public boolean saveModels(final List<Saveable> finalModels, final IShellProvider shellProvider,
 			IRunnableContext runnableContext) {
 		return saveModels(finalModels, shellProvider, runnableContext, true);
 	}
@@ -643,29 +651,25 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param blockUntilSaved
 	 * @return <code>true</code> if the operation was canceled
 	 */
-	public boolean saveModels(final List finalModels, final IShellProvider shellProvider,
+	public boolean saveModels(final List<Saveable> finalModels, final IShellProvider shellProvider,
 			IRunnableContext runnableContext, final boolean blockUntilSaved) {
-		IRunnableWithProgress progressOp = new IRunnableWithProgress() {
-			@Override
-			public void run(IProgressMonitor monitor) {
-				IProgressMonitor monitorWrap = new EventLoopProgressMonitor(
-						monitor);
-				monitorWrap.beginTask(WorkbenchMessages.Saving_Modifications, finalModels.size());
-				for (Iterator i = finalModels.iterator(); i.hasNext();) {
-					Saveable model = (Saveable) i.next();
-					// handle case where this model got saved as a result of
-					// saving another
-					if (!model.isDirty()) {
-						monitor.worked(1);
-						continue;
-					}
-					SaveableHelper.doSaveModel(model, new SubProgressMonitor(monitorWrap, 1),
-							shellProvider, blockUntilSaved);
-					if (monitorWrap.isCanceled())
-						break;
+		IRunnableWithProgress progressOp = monitor -> {
+			IProgressMonitor monitorWrap = new EventLoopProgressMonitor(monitor);
+			SubMonitor subMonitor = SubMonitor.convert(monitorWrap, WorkbenchMessages.Saving_Modifications,
+					finalModels.size());
+			for (Saveable model : finalModels) {
+				// handle case where this model got saved as a result of
+				// saving another
+				if (!model.isDirty()) {
+					subMonitor.worked(1);
+					continue;
 				}
-				monitorWrap.done();
+				SaveableHelper.doSaveModel(model, subMonitor.split(1),
+						shellProvider, blockUntilSaved);
+				if (subMonitor.isCanceled())
+					break;
 			}
+			monitorWrap.done();
 		};
 
 		// Do the save.
@@ -675,11 +679,11 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	}
 
 	private static class PostCloseInfo {
-		private List partsClosing = new ArrayList();
+		private List<IWorkbenchPart> partsClosing = new ArrayList<>();
 
-		private Map modelsDecrementing = new HashMap();
+		private Map<Saveable, Integer> modelsDecrementing = new HashMap<>();
 
-		private Set modelsClosing = new HashSet();
+		private Set<Saveable> modelsClosing = new HashSet<>();
 	}
 
 	/**
@@ -687,16 +691,14 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 */
 	public void postClose(Object postCloseInfoObject) {
 		PostCloseInfo postCloseInfo = (PostCloseInfo) postCloseInfoObject;
-		List removed = new ArrayList();
-		for (Iterator it = postCloseInfo.partsClosing.iterator(); it.hasNext();) {
-			IWorkbenchPart part = (IWorkbenchPart) it.next();
-			Set saveables = (Set) modelMap.get(part);
+		List<Saveable> removed = new ArrayList<>();
+		for (IWorkbenchPart part : postCloseInfo.partsClosing) {
+			Set<Saveable> saveables = modelMap.get(part);
 			if (saveables != null) {
 				// make a copy to avoid a ConcurrentModificationException - we
 				// will remove from the original set as we iterate
-				saveables = new HashSet(saveables);
-				for (Iterator it2 = saveables.iterator(); it2.hasNext();) {
-					Saveable saveable = (Saveable) it2.next();
+				saveables = new HashSet<>(saveables);
+				for (Saveable saveable : saveables) {
 					if (removeModel(part, saveable)) {
 						removed.add(saveable);
 					}
@@ -705,7 +707,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 		}
 		if (removed.size() > 0) {
 			fireModelLifecycleEvent(new SaveablesLifecycleEvent(this,
-					SaveablesLifecycleEvent.POST_CLOSE, (Saveable[]) removed
+					SaveablesLifecycleEvent.POST_CLOSE, removed
 							.toArray(new Saveable[removed.size()]), false));
 		}
 	}
@@ -731,14 +733,14 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	}
 
 	/**
-	 * @param actualPart
+	 * @param part
 	 */
 	public void postOpen(IWorkbenchPart part) {
 		addModels(part, getSaveables(part));
 	}
 
 	/**
-	 * @param actualPart
+	 * @param part
 	 */
 	public void dirtyChanged(IWorkbenchPart part) {
 		Saveable[] saveables = getSaveables(part);
@@ -752,13 +754,12 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * For testing purposes. Not to be called by clients.
 	 *
 	 * @param model
-	 * @return
+	 * @return never null
 	 */
 	public Object[] testGetSourcesForModel(Saveable model) {
-		List result = new ArrayList();
-		for (Iterator it = modelMap.entrySet().iterator(); it.hasNext();) {
-			Map.Entry entry = (Map.Entry) it.next();
-			Set values = (Set) entry.getValue();
+		List<Object> result = new ArrayList<>();
+		for (Entry<Object, Set<Saveable>> entry : modelMap.entrySet()) {
+			Set<Saveable> values = entry.getValue();
 			if (values.contains(model)) {
 				result.add(entry.getKey());
 			}
@@ -786,20 +787,15 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			setShellStyle(shellStyle | SWT.SHEET);
 		}
 
-		/**
-		 * @return
-		 */
 		public boolean getDontPromptSelection() {
 			return dontPromptSelection;
 		}
 
 		@Override
 		protected void createButtonsForButtonBar(Composite parent) {
-			createButton(parent, IDialogConstants.OK_ID,
-					IDialogConstants.OK_LABEL, true);
+			createButton(parent, IDialogConstants.OK_ID, IDialogConstants.OK_LABEL, true);
 			if (canCancel) {
-				createButton(parent, IDialogConstants.CANCEL_ID,
-						IDialogConstants.CANCEL_LABEL, false);
+				createButton(parent, IDialogConstants.CANCEL_ID, IDialogConstants.CANCEL_LABEL, false);
 			}
 		}
 
@@ -812,12 +808,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 				 checkboxComposite.setLayout(new GridLayout(2, false));
 
 				 checkbox = new Button(checkboxComposite, SWT.CHECK);
-				 checkbox.addSelectionListener(new SelectionAdapter() {
-					@Override
-					public void widgetSelected(SelectionEvent e) {
-						dontPromptSelection = checkbox.getSelection();
-					}
-				 });
+				 checkbox.addSelectionListener(widgetSelectedAdapter(e -> dontPromptSelection = checkbox.getSelection()));
 				 GridData gd = new GridData();
 				 gd.horizontalAlignment = SWT.BEGINNING;
 				 checkbox.setLayoutData(gd);
@@ -838,23 +829,19 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 *         list which are not workbench parts.
 	 */
 	public ISaveablesSource[] getNonPartSources() {
-		return (ISaveablesSource[]) nonPartSources
+		return nonPartSources
 				.toArray(new ISaveablesSource[nonPartSources.size()]);
 	}
 
-	/**
-	 * @param model
-	 */
 	public IWorkbenchPart[] getPartsForSaveable(Saveable model) {
-		List result = new ArrayList();
-		for (Iterator it = modelMap.entrySet().iterator(); it.hasNext();) {
-			Map.Entry entry = (Map.Entry) it.next();
-			Set values = (Set) entry.getValue();
+		List<IWorkbenchPart> result = new ArrayList<>();
+		for (Entry<Object, Set<Saveable>> entry : modelMap.entrySet()) {
+			Set<Saveable> values = entry.getValue();
 			if (values.contains(model) && entry.getKey() instanceof IWorkbenchPart) {
-				result.add(entry.getKey());
+				result.add((IWorkbenchPart) entry.getKey());
 			}
 		}
-		return (IWorkbenchPart[]) result.toArray(new IWorkbenchPart[result.size()]);
+		return result.toArray(new IWorkbenchPart[result.size()]);
 	}
 
 }
