@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2010 IBM Corporation and others.
+ * Copyright (c) 2009, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,12 +7,17 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 473973
+ *     Friederike Schertel <friederike@schertel.org> - Bug 478336
  ******************************************************************************/
 package org.eclipse.ui.internal.statushandlers;
+
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.Map;
+import org.eclipse.core.runtime.Adapters;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.action.IAction;
@@ -24,11 +29,8 @@ import org.eclipse.jface.dialogs.MessageDialogWithToggle;
 import org.eclipse.jface.dialogs.TrayDialog;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.viewers.IContentProvider;
-import org.eclipse.jface.viewers.ISelection;
-import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredContentProvider;
 import org.eclipse.jface.viewers.IStructuredSelection;
-import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.TableViewer;
 import org.eclipse.jface.viewers.Viewer;
@@ -36,8 +38,6 @@ import org.eclipse.jface.window.Window;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseListener;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.graphics.Rectangle;
@@ -46,10 +46,8 @@ import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
-import org.eclipse.swt.widgets.Event;
 import org.eclipse.swt.widgets.Label;
 import org.eclipse.swt.widgets.Link;
-import org.eclipse.swt.widgets.Listener;
 import org.eclipse.swt.widgets.Shell;
 import org.eclipse.ui.internal.Workbench;
 import org.eclipse.ui.internal.WorkbenchMessages;
@@ -153,16 +151,13 @@ public class InternalDialog extends TrayDialog {
 	public InternalDialog(final Map dialogState, boolean modal) {
 		super(ProgressManagerUtil.getDefaultParent());
 		this.dialogState = dialogState;
-		supportTray = new SupportTray(dialogState, new Listener() {
-			@Override
-			public void handleEvent(Event event) {
-				dialogState.put(IStatusDialogConstants.TRAY_OPENED,
-						Boolean.FALSE);
-				// close the tray
-				closeTray();
-				// set focus back to shell
-				getShell().setFocus();
-			}
+		supportTray = new SupportTray(dialogState, event -> {
+			dialogState.put(IStatusDialogConstants.TRAY_OPENED,
+					Boolean.FALSE);
+			// close the tray
+			closeTray();
+			// set focus back to shell
+			getShell().setFocus();
 		});
 		detailsManager = new DetailsAreaManager(dialogState);
 		setShellStyle(SWT.RESIZE | SWT.MAX | SWT.MIN | getShellStyle());
@@ -186,16 +181,13 @@ public class InternalDialog extends TrayDialog {
 		}
 		if (id == IDialogConstants.DETAILS_ID) {
 			// was the details button pressed?
-			dialogState.put(IStatusDialogConstants.DETAILS_OPENED, new Boolean(
+			dialogState.put(IStatusDialogConstants.DETAILS_OPENED, Boolean.valueOf(
 					toggleDetailsArea()));
 		} else {
 			super.buttonPressed(id);
 		}
 	}
 
-	/*
-	 * (non-Javadoc) Method declared in Window.
-	 */
 	@Override
 	final protected void configureShell(Shell shell) {
 		super.configureShell(shell);
@@ -214,11 +206,6 @@ public class InternalDialog extends TrayDialog {
 		button.setLayoutData(data);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 *
-	 * @see org.eclipse.jface.dialogs.Dialog#createDialogArea(org.eclipse.swt.widgets.Composite)
-	 */
 	@Override
 	protected Control createDialogArea(Composite parent) {
 		createTitleArea(parent);
@@ -228,11 +215,6 @@ public class InternalDialog extends TrayDialog {
 		return parent;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 *
-	 * @see org.eclipse.jface.dialogs.Dialog#isResizable()
-	 */
 	@Override
 	protected boolean isResizable() {
 		return true;
@@ -323,11 +305,6 @@ public class InternalDialog extends TrayDialog {
 		this.supportTray = supportTray;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 *
-	 * @see org.eclipse.jface.window.Window#open()
-	 */
 	@Override
 	public int open() {
 		boolean modalitySwitch = getBooleanValue(IStatusDialogConstants.MODALITY_SWITCH);
@@ -348,9 +325,6 @@ public class InternalDialog extends TrayDialog {
 		return result;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.jface.dialogs.TrayDialog#closeTray()
-	 */
 	@Override
 	public void closeTray() throws IllegalStateException {
 		if (getTray() != null) {
@@ -389,6 +363,9 @@ public class InternalDialog extends TrayDialog {
 	}
 
 	void refreshDialogSize() {
+		if (dialogArea == null || dialogArea.isDisposed()) {
+			return;
+		}
 		Point newSize = getShell().computeSize(SWT.DEFAULT, SWT.DEFAULT);
 		getShell().setSize(newSize);
 	}
@@ -482,16 +459,8 @@ public class InternalDialog extends TrayDialog {
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 *
-	 * @see
-	 * org.eclipse.jface.dialogs.Dialog#getInitialLocation(org.eclipse.swt.graphics
-	 * .Point)
-	 */
 	@Override
 	public Point getInitialLocation(Point initialSize) {
-		// TODO Auto-generated method stub
 		return super.getInitialLocation(initialSize);
 	}
 
@@ -536,21 +505,18 @@ public class InternalDialog extends TrayDialog {
 		control.setLayoutData(data);
 		initContentProvider();
 		initLabelProvider();
-		statusListViewer.addPostSelectionChangedListener(new ISelectionChangedListener() {
-			@Override
-			public void selectionChanged(SelectionChangedEvent event) {
-				handleSelectionChange();
-				if ((getTray() == null) && getBooleanValue(IStatusDialogConstants.TRAY_OPENED)
-						&& providesSupport()) {
-					silentTrayOpen();
-					return;
-				}
-				if ((getTray() != null) && !providesSupport()) {
-					silentTrayClose();
-					return;
-				}
-				supportTray.selectionChanged(event);
+		statusListViewer.addPostSelectionChangedListener(event -> {
+			handleSelectionChange();
+			if ((getTray() == null) && getBooleanValue(IStatusDialogConstants.TRAY_OPENED)
+					&& providesSupport()) {
+				silentTrayOpen();
+				return;
 			}
+			if ((getTray() != null) && !providesSupport()) {
+				silentTrayClose();
+				return;
+			}
+			supportTray.selectionChanged(event);
 		});
 		Dialog.applyDialogFont(parent);
 	}
@@ -869,37 +835,17 @@ public class InternalDialog extends TrayDialog {
 	 */
 	private void initContentProvider() {
 		IContentProvider provider = new IStructuredContentProvider() {
-			/*
-			 * (non-Javadoc)
-			 *
-			 * @see org.eclipse.jface.viewers.IContentProvider#dispose()
-			 */
 			@Override
 			public void dispose() {
 				// Nothing of interest here
 			}
 
-			/*
-			 * (non-Javadoc)
-			 *
-			 * @see
-			 * org.eclipse.jface.viewers.IStructuredContentProvider#getElements
-			 * (java.lang.Object)
-			 */
 			@Override
 			public Object[] getElements(Object inputElement) {
 				return ((Collection) dialogState
 						.get(IStatusDialogConstants.STATUS_ADAPTERS)).toArray();
 			}
 
-			/*
-			 * (non-Javadoc)
-			 *
-			 * @see
-			 * org.eclipse.jface.viewers.IContentProvider#inputChanged(org
-			 * .eclipse.jface.viewers.Viewer, java.lang.Object,
-			 * java.lang.Object)
-			 */
 			@Override
 			public void inputChanged(Viewer viewer, Object oldInput,
 					Object newInput) {
@@ -974,30 +920,20 @@ public class InternalDialog extends TrayDialog {
 				.setText(WorkbenchMessages.WorkbenchStatusDialog_SupportHyperlink);
 		link
 				.setToolTipText(WorkbenchMessages.WorkbenchStatusDialog_SupportTooltip);
-		link.addSelectionListener(new SelectionAdapter() {
-			@Override
-			public void widgetSelected(SelectionEvent e) {
-				openTray();
-			}
-		});
+		link.addSelectionListener(widgetSelectedAdapter(e -> openTray()));
 		Dialog.applyDialogFont(link);
 		return link;
 	}
 
 	private Link createShowErrorLogLink() {
 		Link link = new Link(linkComposite, SWT.NONE);
-		link.addSelectionListener(new SelectionAdapter() {
-			@Override
-			public void widgetSelected(SelectionEvent e) {
-				try {
-					Workbench.getInstance().getActiveWorkbenchWindow()
-							.getActivePage().showView(LOG_VIEW_ID);
-				} catch (CoreException ce) {
-					StatusManager.getManager().handle(ce,
-							WorkbenchPlugin.PI_WORKBENCH);
-				}
+		link.addSelectionListener(widgetSelectedAdapter(e -> {
+			try {
+				Workbench.getInstance().getActiveWorkbenchWindow().getActivePage().showView(LOG_VIEW_ID);
+			} catch (CoreException ce) {
+				StatusManager.getManager().handle(ce, WorkbenchPlugin.PI_WORKBENCH);
 			}
-		});
+		}));
 		link.setText(WorkbenchMessages.ErrorLogUtil_ShowErrorLogHyperlink);
 		link
 				.setToolTipText(WorkbenchMessages.ErrorLogUtil_ShowErrorLogTooltip);
@@ -1021,7 +957,7 @@ public class InternalDialog extends TrayDialog {
 	private IAction getGotoAction() {
 		Object property = null;
 
-		Job job = (Job) (getCurrentStatusAdapter().getAdapter(Job.class));
+		Job job = Adapters.adapt(getCurrentStatusAdapter(), Job.class);
 		if (job != null) {
 			property = job.getProperty(IProgressConstants.ACTION_PROPERTY);
 		}
@@ -1039,13 +975,9 @@ public class InternalDialog extends TrayDialog {
 	 * @return StatusAdapter or <code>null</code>.
 	 */
 	private StatusAdapter getSingleSelection() {
-		ISelection rawSelection = statusListViewer.getSelection();
-		if (rawSelection != null
-				&& rawSelection instanceof IStructuredSelection) {
-			IStructuredSelection selection = (IStructuredSelection) rawSelection;
-			if (selection.size() == 1) {
-				return (StatusAdapter) selection.getFirstElement();
-			}
+		IStructuredSelection selection = statusListViewer.getStructuredSelection();
+		if (selection.size() == 1) {
+			return (StatusAdapter) selection.getFirstElement();
 		}
 		return null;
 	}
